# trading-system

./: .gitignore  BUGFIX_SUMMARY.md  DEBUGGING_FIXES.md  README.md  SETUP_SUMMARY.md  apply_migrations.go  config.example  go.mod  test_webhook_samples.json
.cursor/rules/: agent-mode.mdc  cursor-rules.mdc
.specstory/history/: 2025-06-09_09-57-review-trading-system-architecture-and-errors.md  2025-06-10_13-34-recovering-trading-system-after-accidental-deletion.md  2025-06-10_14-03-debugging-webhook-error-in-trading-system.md
cf-worker/: README.md  package-lock.json  package.json  wrangler.toml
cf-worker/src/: index.js
cmd/trading-engine/: main.go
docs/: ARCHITECTURE_DECISION.md  BROKER_SETUP.md  system-arch.mermaid
docs/partial-profit-architecture/: 1.0.0.md  1.1.0.md
internal/config/: config.go
internal/database/: db.go  models.go
internal/mt5/: client.go
internal/server/: server.go
internal/signals/: processor.go
migrations/: 001-init-db.sql  002-add-partial-profit-fields.sql  003-fix-decimal-precision.sql  004-add-parent-trade-id.sql
mt5-bridge/: README.md  mt5_bridge.py  pyproject.toml  requirements.txt
mt5-bridge/src/mt5_trading_bridge/: __init__.py
mt5-ea/: README.md  TradingSystemEA.mq5
pine-scripts/: manipulation_partial_tp.pine
scripts/: deploy-partial-profits.sh  setup.sh  setup_mt5_bridge.py  setup_mt5_bridge_uv.py  test_mt5_integration.sh  test_webhook.sh
